[package]
name = "clickatell-api"
version = "0.2.0"
edition = "2021"
description = "Send messages to mobile phones via Clickatell messaging gateways"
license = "MIT"

[dependencies]
reqwest = {version= "0.11", features=["json"]}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
chrono = "0.4"
